--- a/src/component/dashboard/dashboard.css
+++ b/src/component/dashboard/dashboard.css
@@ -632,17 +632,17 @@ th,td
 
 .box-1
 {
-    background: linear-gradient(to right, #282c34, #7029ef);
+    background: linear-gradient(to right, #282c34, #884df2);
 }
 
 .box-2
 {
-    background: linear-gradient(to right, #282c34, #430ca6);
+    background: linear-gradient(to right, #282c34, #6012ed);
 }
 
 .box-3
 {
-    background: linear-gradient(to right, #282c34, #1d0547);
+    background: linear-gradient(to right, #282c34, #3a0b8e);
 }
 
 .home-second-row
@@ -703,14 +703,14 @@ th,td
 {
     font-size: 30px;
     font-weight: bold;
-    color:#dddddd;
+    color:#ffffff;
 }
 
 .box-title
 {
     font-size: 20px;
     font-weight: bold;
-    color:#ec2009;
+    color:#dddddd;
 }
 
 .list-header
